<resources>
    <string name="app_name">Z TV</string>
    <string name="tv_show_mostpopular">Tv Show | MostPopular</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2022">•</string>
    <string name="website">WEBSITE</string>
    <string name="episodes">Episodes</string>
    <string name="your_watchlist">Your WatchList</string>
    <string name="what_is_in_your_mind">Type Here To Search! </string>
    <string name="there_no_network_connection_n">There No Network Connection</string>
    <string name="check_your_connection_or_click_retry">Check your connection or Click Retry</string>
    <string name="retry">Retry</string>
    <string name="todo">TODO</string>

</resources>