<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lost_connection_back"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_wifi_off_24"
            app:tint="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:padding="@dimen/_3sdp"
            android:text="@string/there_no_network_connection_n"
            android:textAlignment="center"
            android:textColor="@color/colorTextOther"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center|top"
            android:text="@string/check_your_connection_or_click_retry"
            android:textColor="@color/colorTextOther"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_64sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/retry_bac"
            android:padding="@dimen/_4sdp"
            android:text="@string/retry"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextOther" />

    </LinearLayout>


</LinearLayout>