<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="tvShowImageurl"
            type="String" />

        <variable
            name="tvShow"
            type="com.example.ztv.models.TvShow" />

        <variable
            name="TvDescription"
            type="String" />

        <variable
            name="rating"
            type="String" />

        <variable
            name="genre"
            type="String" />

        <variable
            name="length"
            type="String" />


        <import type="android.view.View" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        tools:context=".UI.TVShowDetails">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/swipePhotos"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@id/swipePhotos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/view_pager_background"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/swipePhotos"
                    app:layout_constraintStart_toStartOf="parent" />


                <LinearLayout
                    android:id="@+id/indicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ImageShow"
                    tools:ignore="NotSibling" />

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/back_image"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorTextIcons" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ImageShow"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:Imageurl="@{tvShowImageurl}"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/swipePhotos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/swipePhotos"
                    app:riv_corner_radius="@dimen/_8sdp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShow.tvName}"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ImageShow"
                    app:layout_constraintTop_toBottomOf="@id/swipePhotos" />

                <TextView
                    android:id="@+id/tv_network"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShow.network}"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />


                <TextView
                    android:id="@+id/tv_Started"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text='@{"Started at: " + tvShow.startDate}'
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_network" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@{tvShow.status}"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_Started" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="4"
                    android:text="@{TvDescription}"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ImageShow" />

                <TextView
                    android:id="@+id/tv_Read_More"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/read_more"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@id/tv_Read_More" />

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider">

                    <ImageView
                        android:id="@+id/rating"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_rating"
                        app:tint="@color/colorTextOther" />

                    <TextView
                        android:id="@+id/rating_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@{rating}"
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/u2022"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@{genre}"
                        android:textColor="@color/colorTextIcons" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/u2022"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text='@{length + " min"}'
                        android:textColor="@color/colorTextIcons"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <View
                    android:id="@+id/bottom_divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@color/colorTextSecondary"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/website"
                    app:cornerRadius="@dimen/_6sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_episodes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bottom_divider" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_episodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="144dp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:backgroundTint="@color/colorTextOther"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/episodes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="@id/btn_website"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/btn_website" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE ,default=gone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/watchList"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/back_fab"
            android:src="@drawable/ic_watch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/colorTextIcons" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>